; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_ohci.c_software_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/firewire/extr_ohci.c_software_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fw_ohci = type { i32 }

@OHCI1394_HCControlSet = common dso_local global i32 0, align 4
@OHCI1394_HCControl_softReset = common dso_local global i32 0, align 4
@OHCI_LOOP_COUNT = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fw_ohci*)* @software_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @software_reset(%struct.fw_ohci* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fw_ohci*, align 8
  %4 = alloca i32, align 4
  store %struct.fw_ohci* %0, %struct.fw_ohci** %3, align 8
  %5 = load %struct.fw_ohci*, %struct.fw_ohci** %3, align 8
  %6 = load i32, i32* @OHCI1394_HCControlSet, align 4
  %7 = load i32, i32* @OHCI1394_HCControl_softReset, align 4
  %8 = call i32 @reg_write(%struct.fw_ohci* %5, i32 %6, i32 %7)
  store i32 0, i32* %4, align 4
  br label %9

9:                                                ; preds = %23, %1
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @OHCI_LOOP_COUNT, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %26

13:                                               ; preds = %9
  %14 = load %struct.fw_ohci*, %struct.fw_ohci** %3, align 8
  %15 = load i32, i32* @OHCI1394_HCControlSet, align 4
  %16 = call i32 @reg_read(%struct.fw_ohci* %14, i32 %15)
  %17 = load i32, i32* @OHCI1394_HCControl_softReset, align 4
  %18 = and i32 %16, %17
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store i32 0, i32* %2, align 4
  br label %29

21:                                               ; preds = %13
  %22 = call i32 @msleep(i32 1)
  br label %23

23:                                               ; preds = %21
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %4, align 4
  br label %9

26:                                               ; preds = %9
  %27 = load i32, i32* @EBUSY, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %26, %20
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @reg_write(%struct.fw_ohci*, i32, i32) #1

declare dso_local i32 @reg_read(%struct.fw_ohci*, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
